Fixed issues with sidebar and dropdown-menu in topbar, on mobile devices.

--- a/fron/src/scss/modules/sidebar.scss
+++ b/fron/src/scss/modules/sidebar.scss
@@ -3,7 +3,7 @@
 
 
 .sidebar{
-    z-index: 1000;
+    z-index: 30;
     left: 250px;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -76,25 +76,7 @@
     }
 }
 
-
 @media(max-width:768px){
-    .sidebar{
-        width: 100%;
-    }
-    .row{
-        &.toggled{
-            .sidebar{
-                width: 100%;
-                height: 95%;
-                border-right: solid 1px;
-
-                &.sidebar-nav
-                {
-                    height: 100%;
-                }
-            }
-        }
-    }
     .sidebar-nav{
         text-align: center;
     }
