--- a/fron/src/scss/modules/topbar.scss
+++ b/fron/src/scss/modules/topbar.scss
@@ -57,8 +57,11 @@
                 height: 39px;
                 border-radius: 50%;
             }
-            .dropdown-item{
-                color:black;
+            .dropdown-menu{
+                z-index:1000;
+                .dropdown-item{
+                    color:black;
+                }
             }
         }
     }
